PYIC-5082: Removing updating of CIs in place
If we've moved to a model of storing every CI individually and then
merging them when generating the CI VC, then updating CIs in place no
longer makes sense and can be removed.